add fonts/new style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,9 @@ body {
   src: url('../../public/fonts/Neglige.otf');
 }
 
+@layer components {
+  .font-title {
+    font-family: 'Title', sans-serif;
+  }
+}
+
